--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,3 +10,36 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.traffic-light{
+    text-align: center;
+}
+.stick{
+    width: 10px;
+    height: 50px;
+    background-color: black;
+    margin: auto;
+}
+.traffic-light-body{
+    background-color: black;
+    padding: 10px;
+    display: inline-block;
+    margin: auto;
+    border-radius: 10px;
+}
+.Light{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+}
+.red {
+    background-color: red;
+}
+.yellow {
+    background-color: yellow;
+}
+.green {
+    background-color: green;
+}
+.glow{
+    box-shadow: 0px 0px 9px 4px yellow;
+}
